tests/snapshots/examples_fixtures/type_system__failing__69_hm_typed_let_infix_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx:9:18
  |
9 |     let y: Int = x + 1
  |                  ^^^^^
  |                  ----- this expression has type `Int`

  |                  ----- this type mismatch is reported here

Note:
  expected type: String
  found type: Int
  the conflicting types meet at this expression

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
